--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miguel Ángel Cornejo | A Holy Grail Layout Example </title>
-    <meta name="description" content="A website design titled "Holy Grail">
+    <meta name="description" content="A website design titled Holy Grail">
     <meta name="author" content="Miguel Ángel Cornejo">
 </head>
 
