--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ángel Cornejo | WDD130 </title>
     <meta name="description" content="Ángel Cornejo's BYU-Idaho WDD130 course home page ">
-    <meta name="author" content="Ángel Cornejo">
+    <meta name="author" content="Miguel Ángel Cornejo Durand">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
