--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
 
 <head>
-    <meta charset = "utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title> Ángel Cornejo | WDD130 </title>
     <meta name="description" content="Ángel Cornejo's BYU-Idaho WDD130 course home page ">
-    <meta name="author" content="Miguel Ángel Cornejo Durand">
+    <meta name="author" content="Ángel Cornejo">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -18,19 +18,22 @@
         </nav>
     </header>
     <main>
-        <h1> Miguel Ángel Cornejo | WDD130</h1>
+        <h1> Ángel Cornejo | WDD130</h1>
         <img src="images/profile.webp" alt="Hello averyone My name is Angel Cornejo" width="200">
-        <p> My name is Miguel Angel Cornejo, I am from Cusco Peru. 
+        <p> My name is Miguel Ángel Cornejo, I am from Cusco Peru. 
             I love learning new things especially related to technology, 
-            I love music, movies and chess.</p>
+            I love music, movies and chess.
+        </p>
         <p> I love helping in missionary work on both sides of the veil. 
-            Here excited for this being the first time I'm personally going to create my own website.</p>
+            Here excited for this being the first time I'm personally going to create my own website.
+        </p>
     </main>
     <aside>
         <h2>Perú</h2>
         <img src="images/main-square-cusco.jpg" alt="Main Square Cusco, Peru">
         <p>The Plaza de Armas of the city of Cusco, Capital of the Ancient Inca Empire.
-           The city of Cusco, also known as the Archaeological Capital of America, is located in South America, int he eastern Cordillera of southern Peru on a 3,400 meters above sea level. -wiki</p>
+           The city of Cusco, also known as the Archaeological Capital of America, is located in South America, int he eastern Cordillera of southern Peru on a 3,400 meters above sea level. -wiki
+        </p>
     </aside>
     <footer>
         <p>©️2024 🐈Miguel Angel Cornejo🐈 Cusco, Perú</p>
