--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title> Ángel Cornejo | WDD130 </title>
     <meta name="description" content="Ángel Cornejo's BYU-Idaho WDD130 course home page ">
     <meta name="author" content="Ángel Cornejo">
