--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </main>
     <aside>
         <h2>Perú</h2>
-        <img src="images/main-square-cusco.jpg" alt="Main Square Cusco, Peru">
+        <img src="images/main-square-cusco.webp" alt="Main Square Cusco, Peru">
         <p>The Plaza de Armas of the city of Cusco, Capital of the Ancient Inca Empire.
            The city of Cusco, also known as the Archaeological Capital of America, is located in South America, int he eastern Cordillera of southern Peru on a 3,400 meters above sea level. -wiki
         </p>
