--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title> Ángel Cornejo | WDD130 </title>
-    <meta name="description" content="Ángel Cornejo's BYU-Idaho WDD130 course home page ">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Ángel Cornejo | WDD 130 </title>
+    <meta name="description" content="Ángel Cornejo's BYU-Idaho WDD130 course home page">
     <meta name="author" content="Ángel Cornejo">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
     <header>
         <nav>
-          <a href="#">Home</a>
-          <a href="wwr/">White Water Rafting Website</a>
-          <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="#">Home</a>
+            <a href="wwr/">White Water Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         </nav>
     </header>
     <main>
         <h1> Ángel Cornejo | WDD130</h1>
         <img src="images/profile.webp" alt="Hello averyone My name is Angel Cornejo" width="200">
-        <p> My name is Miguel Ángel Cornejo, I am from Cusco Peru. 
-            I love learning new things especially related to technology, 
+        <p> My name is Miguel Ángel Cornejo, I am from Cusco Peru.
+            I love learning new things especially related to technology,
             I love music, movies and chess.
         </p>
-        <p> I love helping in missionary work on both sides of the veil. 
+        <p> I love helping in missionary work on both sides of the veil.
             Here excited for this being the first time I'm personally going to create my own website.
         </p>
     </main>
@@ -32,11 +33,13 @@
         <h2>Perú</h2>
         <img src="images/main-square-cusco.webp" alt="Main Square Cusco, Peru">
         <p>The Plaza de Armas of the city of Cusco, Capital of the Ancient Inca Empire.
-           The city of Cusco, also known as the Archaeological Capital of America, is located in South America, int he eastern Cordillera of southern Peru on a 3,400 meters above sea level. -wiki
+            The city of Cusco, also known as the Archaeological Capital of America, is located in South America, int he
+            eastern Cordillera of southern Peru on a 3,400 meters above sea level. -wiki
         </p>
     </aside>
     <footer>
         <p>©️2024 🐈Miguel Angel Cornejo🐈 Cusco, Perú</p>
     </footer>
 </body>
+
 </html>
