use of variables CSS

--- a/index.html
+++ b/index.html
@@ -22,14 +22,23 @@
         <h1> Ángel Cornejo | WDD130</h1>
         <img src="images/profile.webp" alt="Hello averyone My name is Angel Cornejo" width="200">
         <p> My name is Miguel Ángel Cornejo, I am from Cusco Peru.
+            I am an Electrical Engineer, father of a beautiful princess who is my engine and motive.
             I love learning new things especially related to technology,
-            I love music, movies and chess.
+            I love music, cinema and chess. It is a challenge to learn 
+            about programming and web design in English, which is not my native language.
         </p>
-        <p> I love helping in missionary work on both sides of the veil.
-            Here excited for this being the first time I'm personally going to create my own website.
+        <p> I am a member of the Church of Jesus Christ of Latter-day Saints and 
+            apart from my calling in the ward I am a worker in the Arequipa Temple in my country 
+            and I love helping in missionary work on both sides of the veil. 
+            I'm excited that this is the first time I'll personally create my own website.
         </p>
+        <ul class="callout">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-temple?lang=eng" target="_blank">Lima Peru Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple?lang=eng" target="_blank">Lima Peru Los Olivos Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/arequipa-peru-temple?lang=eng" target="_blank"> Arequipa Peru Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="callout">
         <h2>Perú</h2>
         <img src="images/main-square-cusco.webp" alt="Main Square Cusco, Peru">
         <p>The Plaza de Armas of the city of Cusco, Capital of the Ancient Inca Empire.
@@ -38,8 +47,8 @@
         </p>
     </aside>
     <footer>
-        <p>©️2024 🐈Miguel Angel Cornejo🐈 Cusco, Perú</p>
+        <p>©️2024 🐈Miguel Ángel Cornejo🐈 Cusco, Perú</p>
     </footer>
 </body>
-<!-- Last update november 17 -->
+<!-- Last update november 21 -->
 </html>
