changes to CSS layouts

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--23 November 2024 -->
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -13,15 +14,18 @@
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+         <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="wwr/">White Water Rafting Site</a></li>
+          <li><a href="https://linkedin.com">Linkedin Page</a></li>
+          <li><a href="https://facebook.com">Facebook Page</a></li>
+         </ul>
         </nav>
     </header>
     <main>
         <h1> Ángel Cornejo | WDD130</h1>
         <img src="images/profile.webp" alt="Hello averyone My name is Angel Cornejo" width="200">
-        <p> My name is Miguel Ángel Cornejo, I am from Cusco Peru.
+        <p> My name is Miguel Ángel Cornejo Durand, I am from Cusco Peru.
             I am an Electrical Engineer, father of a beautiful princess who is my engine and motive.
             I love learning new things especially related to technology,
             I love music, cinema and chess. It is a challenge to learn 
@@ -32,14 +36,14 @@
             and I love helping in missionary work on both sides of the veil. 
             I'm excited that this is the first time I'll personally create my own website.
         </p>
-        <ul class="callout">
+        <ul class="box">
             <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-temple?lang=eng" target="_blank">Lima Peru Temple</a></li>
             <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple?lang=eng" target="_blank">Lima Peru Los Olivos Temple</a></li>
             <li><a href="https://www.churchofjesuschrist.org/temples/details/arequipa-peru-temple?lang=eng" target="_blank"> Arequipa Peru Temple</a></li>
         </ul>
     </main>
-    <aside class="callout">
-        <h2>Perú</h2>
+    <aside class="box">
+        <h2>Cusco-Perú</h2>
         <img src="images/main-square-cusco.webp" alt="Main Square Cusco, Peru">
         <p>The Plaza de Armas of the city of Cusco, Capital of the Ancient Inca Empire.
             The city of Cusco, also known as the Archaeological Capital of America, is located in South America, int he
@@ -50,5 +54,5 @@
         <p>©️2024 🐈Miguel Ángel Cornejo🐈 Cusco, Perú</p>
     </footer>
 </body>
-<!-- Last update november 21 -->
+<!-- Last update november 23 -->
 </html>
