changes to CSS layout

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             and I love helping in missionary work on both sides of the veil. 
             I'm excited that this is the first time I'll personally create my own website.
         </p>
-        <ul class="box">
+        <ul class="box indent">
             <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-temple?lang=eng" target="_blank">Lima Peru Temple</a></li>
             <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple?lang=eng" target="_blank">Lima Peru Los Olivos Temple</a></li>
             <li><a href="https://www.churchofjesuschrist.org/temples/details/arequipa-peru-temple?lang=eng" target="_blank"> Arequipa Peru Temple</a></li>
