working with wireframes

--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Wireframe Practice </title>
         <!-- <meta name="description" content="White water rafting site project is a website project 
@@ -14,17 +14,80 @@
     </head>
     <body>
         <header>
-           <img src="" alt="">
+           <div class="logo-box">
+                <img src="images/logo.jpg" alt="logo">
+           </div> 
            <nav>
-            <a href="#">Home</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
+            <a href="index.html">Home</a>
+            <a href="#">About us</a>
+            <a href="#">Rentals</a>
+            <a href="#">Trips</a>
            </nav> 
         </header>
 
         <main>
+            <div id= "banner-box">
+                <section class='banner'>
+                    <img src="images/banner1.jpeg" alt="banner image desc">
+                    <h2>Banner 1 Title</h2>
+                    <p>Banner 1 text paragraph</p>
+                </section>
+                <section class='banner'>
+                    <img src="images/banner2.jpeg" alt="banner image desc">
+                    <h2>Banner 2 Title</h2>
+                    <p>Banner 2 text paragraph</p>
+                </section>
+                <section class='banner'>
+                    <img src="images/banner3.jpeg" alt="banner image desc">
+                    <h2>Banner 3 Title</h2>
+                    <p>Banner 3 text paragraph</p>
+                </section>
+            </div>
+            <div id= 'product-gallery'>
+                <section class='product'>
+                    <img src="images/product1.jpeg" alt="product image desc">
+                    <h2>Product 1 Title</h2>
+                    <p>Product 1 description </p>
+                </section>
+                <section class='product'>
+                    <img src="images/product2.jpeg" alt="product image desc">
+                    <h2>Product 2 Title</h2>
+                    <p>Product 2 description</p>
+                </section>
+                <section class='product'>
+                    <img src="images/product3.jpeg" alt="product image desc">
+                    <h2>Product 3 Title</h2>
+                    <p>Product 3 description</p>
+                </section>
+                <section class='product'>
+                    <img src="images/product4.jpeg" alt="product image desc">
+                    <h2>Product 4 Title</h2>
+                    <p>Product 4 description</p>
+                </section>
+                <section class='product'>
+                    <img src="images/product5.jpeg" alt="product image desc">
+                    <h2>Product 5 Title</h2>
+                    <p>Product 5 description</p>
+                </section>
+                <section class='product'>
+                    <img src="images/product6.jpeg" alt="product image desc">
+                    <h2>Product 6 Title</h2>
+                    <p>Product 6 description</p>
+                </section>
+                <section class='product'>
+                    <img src="images/product7.jpeg" alt="product image desc">
+                    <h2>Product 7 Title</h2>
+                    <p>Product 7 description</p>
+                </section>
+                <section class='product'>
+                    <img src="images/product8.jpeg" alt="product image desc">
+                    <h2>Product 8 Title</h2>
+                    <p>Product 8 description</p>
+                </section>
+            </div>            
+
         </main>
+
         <footer>
         </footer>
     </body>
