--- a/index.html
+++ b/index.html
@@ -14,44 +14,69 @@
 <body>
     <header>
         <nav>
-         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="wwr/">White Water Rafting Site</a></li>
-          <li><a href="https://linkedin.com">Linkedin Page</a></li>
-          <li><a href="https://facebook.com">Facebook Page</a></li>
-         </ul>
+        <a href="#">Home</a></li>
+        <a href="wwr/">Rafting WebSite</a></li>
+        <a href="wwr/">Siteplan</a></li>
+        <a href="https://linkedin.com">Linkedin Page</a></li>
+        <a href="https://facebook.com">Facebook Page</a></li>
         </nav>
     </header>
-    <main>
-        <h1> Ángel Cornejo | WDD130</h1>
-        <img src="images/profile.webp" alt="Hello averyone My name is Angel Cornejo" width="200">
-        <p> My name is Miguel Ángel Cornejo Durand, I am from Cusco Peru.
-            I am an Electrical Engineer, father of a beautiful princess who is my engine and motive.
-            I love learning new things especially related to technology,
-            I love music, cinema and chess. It is a challenge to learn 
-            about programming and web design in English, which is not my native language.
-        </p>
-        <p> I am a member of the Church of Jesus Christ of Latter-day Saints and 
-            apart from my calling in the ward I am a worker in the Arequipa Temple in my country 
-            and I love helping in missionary work on both sides of the veil. 
-            I'm excited that this is the first time I'll personally create my own website.
-        </p>
-        <ul class="box indent">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-temple?lang=eng" target="_blank">Lima Peru Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple?lang=eng" target="_blank">Lima Peru Los Olivos Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/arequipa-peru-temple?lang=eng" target="_blank"> Arequipa Peru Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Cusco-Perú</h2>
-        <img src="images/main-square-cusco.webp" alt="Main Square Cusco, Peru">
-        <p>The Plaza de Armas of the city of Cusco, Capital of the Ancient Inca Empire.
-            The city of Cusco, also known as the Archaeological Capital of America, is located in South America, int he
-            eastern Cordillera of southern Peru on a 3,400 meters above sea level. -wiki
-        </p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1> Ángel Cornejo | WDD130</h1>
+            <img src="images/profile.webp" alt="Hello averyone My name is Angel Cornejo" width="200">
+            <p> My name is Miguel Ángel Cornejo Durand, I am from Cusco Peru.
+                I am an Electrical Engineer, father of a beautiful princess who is my engine and motive.
+                I love learning new things especially related to technology,
+                I love music, cinema and chess. It is a challenge to learn 
+                about programming and web design in English, which is not my native language.
+            </p>
+           <p> </p> 
+            <p> I am a member of the Church of Jesus Christ of Latter-day Saints and 
+                apart from my calling in the ward I am a worker in the Arequipa Temple in my country 
+                and I love helping in missionary work on both sides of the veil. 
+                I'm excited that this is the first time I'll personally create my own website.
+            </p>
+            <p> </p> 
+            <p> lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, 
+                sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam
+                quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
+                suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+            </p>
+            <p> </p> 
+            <p> Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, 
+                quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?
+                At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium 
+                voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, 
+                obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi,
+                id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.
+            </p>
+            <p> </p> 
+            
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-temple?lang=eng" target="_blank">Lima Peru Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple?lang=eng" target="_blank">Lima Peru Los Olivos Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/arequipa-peru-temple?lang=eng" target="_blank"> Arequipa Peru Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Cusco-Perú</h2>
+            <img src="images/main-square-cusco.webp" alt="Main Square Cusco, Peru">
+            <p>The Plaza de Armas of the city of Cusco, Capital of the Ancient Inca Empire.
+                The city of Cusco, also known as the Archaeological Capital of America, is located in South America, int he
+                eastern Cordillera of southern Peru on a 3,400 meters above sea level.
+            </p>
+            <p> The Plaza de Armas of Cusco was formerly called “Huacaypata”, a place where people cry since this place was
+                the scene of many deaths, one of many was at the time of Tupac Amaru's rebellion,
+                it has been the nerve center of the city since ancient times.
+            </p>
+        </aside>
+    </div> 
+
     <footer>
-        <p>©️2024 🐈Miguel Ángel Cornejo🐈 Cusco, Perú</p>
+        <h5>
+              ©️2024 🐈Miguel Ángel Cornejo🐈 Cusco, Perú
+        </h5>
     </footer>
 </body>
 <!-- Last update november 23 -->
