changes in the footer

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang= "zxx">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,67 +12,96 @@
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
-        <div class="header-container">
-            <header>
-                <img src="images/logo1.webp" alt="Company Logo" width="100">
+        <header>
+            <div class="header-container">
+                <p> </p>
+                <img src="images/logo.png" alt="Company Logo" width="100">
+                <p> </p>
                 <nav>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About us</a>
-                    <a href="trips.html">Trips</a>
-                    <a href="contact.html">Contact us</a>
-                </nav> 
-            </header> 
-            <main>
-                <div class="hero">
-                    <img src="images/banner1.webp" alt= "Rafting Adventure" width= "1250" height= "620">
-                    <h1>Rafting Aventures</h1>
-                    <article>
-                        <img src="images/client.webp" alt="Portrait of a happy client">
-                        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                           dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-                           non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </h4>
-                    </article>
-                </div>
-                <section>
+                    <ul class="navigation">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About us</a></li>
+                        <li><a href="trips.html">Trips</a></li>
+                        <li><a href="contact.html">Contact us</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header> 
+        <main>
+
+            <div class="hero">
+                <img src="images/banner1.webp" alt= "Rafting Adventure" width= "1250" height= "620">
+                <h1>Rafting Aventures</h1>
+                <article>
+                    <img src="images/client.webp" alt="Portrait of a happy client">
+                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </h4>
+                </article>
+            </div>
+
+            <section class="history">
                     <h2>History</h2>
-                    <p>Lorem ipsum dolor sit amet. Qui voluptatum velit sit quas iure ad iusto voluptatem nam suscipit dolorum.
-                       Aut magnam laborum qui alias quas et quae voluptate ut molestiae ducimus et possimus consectetur rem saepe veritatis!
-                       Non fugiat Quis et enim optio in consequuntur harum non nihil architecto et cumque inventore sit iste temporibus ut explicabo enim.
-                       Et quasi minus ut voluptatum error id fuga quaerat qui tempora velit.
-                    </p>
-                </section>
-                <section>      
-                    <h2>Adventure Awaits You!</h2>
-                    <img src="images/rafting1.webp" alt="Urubamba River">
-                    <p>Urubamba River</p>
-                    <img src="images/rafting2.webp" alt="Sacred Valley River">
-                    <p>Sacred Valley River</p>
-                    <img src="images/rafting3.webp" alt="Adrenaline in small waterfall">
-                    <p>Adrenaline in small waterfall</p>
-                    <img src="images/rafting4.webp" alt="Majestic Vilcanota River">
-                    <p>Majestic Vilcanota River</p>
-                    <img src="images/rafting5.webp" alt="Rafting in Pisaq">
-                    <p>Rafting in Pisaq</p>
-                </section>        
-             </main>
-            <footer>
-                <p>©2024 Rafting Adventure - 🐈Ángel Cornejo🐈 Cusco-Perú
-                </p>
+                    <div class="history-content">
+                        <p>Lorem ipsum dolor sit amet. Qui voluptatum velit sit quas iure ad iusto voluptatem nam suscipit dolorum.
+                        Aut magnam laborum qui alias quas et quae voluptate ut molestiae ducimus et possimus consectetur rem saepe veritatis!
+                        Non fugiat Quis et enim optio in consequuntur harum non nihil architecto et cumque inventore sit iste temporibus ut explicabo enim.
+                        Et quasi minus ut voluptatum error id fuga quaerat qui tempora velit.
+                        </p>
+                        <img src="images/rafting-history1.webp" alt="History Image" class="history-image">
+                        <p>Lorem ipsum dolor sit amet. Qui voluptatum velit sit quas iure ad iusto voluptatem nam suscipit dolorum.
+                            Aut magnam laborum qui alias quas et quae voluptate ut molestiae ducimus et possimus consectetur rem saepe veritatis!
+                            Non fugiat Quis et enim optio in consequuntur harum non nihil architecto et cumque inventore sit iste temporibus ut explicabo enim.
+                            Et quasi minus ut voluptatum error id fuga quaerat qui tempora velit.
+                        </p>
+                    </div>
+            </section>
+
+            <section class="adventure"> 
+                <h2>Adventure Awaits You!</h2>
+                <div class="adventure-content">
+                    <figure>
+                            <img src="images/rafting1.webp" alt="Urubamba River">
+                            <figcaption>Urubamba River</figcaption>
+                    </figure>
+                    <figure>
+                            <img src="images/rafting2.webp" alt="Sacred Valley River">
+                            <figcaption>Sacred Valley River</figcaption>
+                    </figure>
+                    <figure>
+                            <img src="images/rafting3.webp" alt="Adrenaline in small waterfall">
+                            <figcaption>Adrenaline in small waterfall</figcaption>
+                    </figure>
+                    <figure>
+                            <img src="images/rafting4.webp" alt="Majestic Vilcanota River">
+                            <figcaption>Majestic Vilcanota River</figcaption>
+                    </figure>
+                    <figure>
+                            <img src="images/rafting5.webp" alt="Rafting in Pisaq">
+                            <figcaption>Rafting in Pisaq</figcaption>
+                    </figure>
+                </div>
+            </section>        
+        </main>
+        
+        <footer>
+            <div class="footer-container">
+                <h6>©2024 Rafting Adventure - 🐈Ángel Cornejo🐈 Cusco-Perú</h6>
                 <nav class="sociallinks">
                     <a href="https://facebook.com">
-                    <img src="images/Facebook.webp" alt="Facebook">
+                        <img src="images/facebook.webp" alt="Facebook">
                     </a>
                     <a href="https://instagram.com">
-                    <img src="images/Instagram.webp" alt="Instagram">
+                        <img src="images/instagram.webp" alt="Instagram">
                     </a>
                     <a href="https://twitter.com">
-                    <img src="images/Twitter.webp" alt="Twitter">
+                        <img src="images/twiter.webp" alt="Twitter">
                     </a>
                 </nav>
-            </footer> 
-        </div>    
+            </div>
+        </footer>
     </body>
 </html>
-<!-- Last update november 30 -->    
+<!-- Last update December 7-->    
