--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang= "zxx">
+<html lang= "en-US">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> About Us </title>
+        <title> Rafting Adventure - About Us </title>
         <meta name="description" content="Ángel Cornejo's Rafting Site About Us Page">
         <meta name="author" content="Ángel Cornejo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
