change meta charset

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang= "en-US">
+<html lang="en-US">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Rafting Adventure - About Us </title>
         <meta name="description" content="Ángel Cornejo's Rafting Site About Us Page">
@@ -34,10 +34,12 @@
                 <h1>Rafting Aventures</h1>
                 <article>
                     <img src="images/client.webp" alt="Portrait of a happy client">
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <h4>If you have an adventurous spirit, enjoy exciting experiences and are someone in search of experiencing adrenaline to the surface,
+                        strong emotions, adrenaline and being in contact with nature and at the same time enjoying beautiful natural landscapes, 
+                        you will love living and practicing rafting.
+                    </h4>
+                    <h4>This sport consists of descending a river aboard a rowing boat, going through various tests, such as rocks that appear on the way, 
+                        unevenness and turbulence produced by the current.
                     </h4>
                 </article>
             </div>
@@ -45,20 +47,20 @@
             <section class="history">
                     <h2>History</h2>
                     <div class="history-content">
-                        <p>Lorem ipsum dolor sit amet. Qui voluptatum velit sit quas iure ad iusto voluptatem nam suscipit dolorum.
-                        Aut magnam laborum qui alias quas et quae voluptate ut molestiae ducimus et possimus consectetur rem saepe veritatis!
-                        Non fugiat Quis et enim optio in consequuntur harum non nihil architecto et cumque inventore sit iste temporibus ut explicabo enim.
-                        Et quasi minus ut voluptatum error id fuga quaerat qui tempora velit.
-                        </p>
+                        <p>The unevenness of the rivers causes the boat to slide at high speed over the water, turning rafting into a somewhat risky activity.
+                           In fact, there is an international scale to measure the intensity of rapids, 
+                           which ranges from I to VI, although tourist routes are usually class I to III and the following are considered for experts.
+                           Considering that we like this type of adventure, it is important that you use the safety equipment 
+                        </p> 
                         <img src="images/rafting-history1.webp" alt="History Image" class="history-image">
-                        <p>Lorem ipsum dolor sit amet. Qui voluptatum velit sit quas iure ad iusto voluptatem nam suscipit dolorum.
-                            Aut magnam laborum qui alias quas et quae voluptate ut molestiae ducimus et possimus consectetur rem saepe veritatis!
-                            Non fugiat Quis et enim optio in consequuntur harum non nihil architecto et cumque inventore sit iste temporibus ut explicabo enim.
-                            Et quasi minus ut voluptatum error id fuga quaerat qui tempora velit.
+                        <p>provided to you at all times (helmet, vest, in some cases special clothing for cold water, such as a wetsuit).
+                           Above all, it is important that you take into account the advice they give you so that, 
+                           working as a team, you have a great experience in beautiful natural settings.
+                           Start preparing your swimsuit, your sunscreen, your wet shoes, and hold on tight!
+                           Here I'll tell you about some places you can visit in Mexico so you can conquer a river at full speed.
                         </p>
                     </div>
             </section>
-
             <section class="adventure"> 
                 <h2>Adventure Awaits You!</h2>
                 <div class="adventure-content">
@@ -83,7 +85,7 @@
                             <figcaption>Rafting in Pisaq</figcaption>
                     </figure>
                 </div>
-            </section>        
+            </section>
         </main>
         
         <footer>
