--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Rafting Adventure - About Us </title>
-        <meta name="description" content="Ángel Cornejo's Rafting Site About Us Page">
-        <meta name="author" content="Ángel Cornejo">
+        <meta 
+            name="description" 
+            content="The Ángel Cornejo's Rafting Site About Us Page provides information about of
+             the Rafting Adventure Agency, address, phones, emails, employees, located and others">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+             <meta name="author" content="Ángel Cornejo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Roboto&display=swap" rel="stylesheet">
@@ -57,7 +61,7 @@
                            Above all, it is important that you take into account the advice they give you so that, 
                            working as a team, you have a great experience in beautiful natural settings.
                            Start preparing your swimsuit, your sunscreen, your wet shoes, and hold on tight!
-                           Here I'll tell you about some places you can visit in Mexico so you can conquer a river at full speed.
+                           Here I'll tell you about some places you can visit in Sacred Valley of the Incas so you can conquer a river at full speed.
                         </p>
                     </div>
             </section>
