--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,8 +6,8 @@
         <title> Rafting Adventure - About Us </title>
         <meta 
             name="description" 
-            content="The Ángel Cornejo's Rafting Site About Us Page provides information about of
-             the Rafting Adventure Agency, address, phones, emails, employees, located and others">
+            content="The About Us page of the Ángel Cornejo rafting site provides information about
+            the Rafting Adventure Agency, what the company does and what services it offers, mainly in the Sacred Valley of Cusco.">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
              <meta name="author" content="Ángel Cornejo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +30,7 @@
                     </ul>
                 </nav>
             </div>
-        </header> 
+        </header>
         <main>
 
             <div class="hero">
