changes  in title & meta

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Rafting Adventure - About Us </title>
+        <title> Rafting Adventure Agency - About Us Page</title>
         <meta 
             name="description" 
             content="The About Us page of the Ángel Cornejo rafting site provides information about
