--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Rafting Adventure - About Us </title>
+        <title> Rafting Adventure Agency - Contact Page - Phone:999-999-999 Mail to:consulting@raftingadventures.com</title>
         <meta 
             name="description" 
             content="The Ángel Cornejo's Rafting Site About Us Page provides information about of
-             the Rafting Adventure Agency, address, phones, emails, employees, located and others">
+             the Rafting Adventure Agency, address, phones, emails, employees, located and others.
+             Phone:999-999-999 Mail to:consulting@raftingadventures.com">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="author" content="Ángel Cornejo">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -129,9 +130,10 @@
                         <div class="data-specific">
                             <div class="purpose">
                                 <h3>PURPOSE OF THE MESSAGE</h3>
-                                <label style="float:left"><input checked type="radio" value="Inquire">General Inquiry</label>
-                                <label style="float:left"><input type="radio" value="Reservation">Reservation Question</label>
-                                <label style="float:left"><input type="radio" value="Suggestion">Web Site Suggestion</label>
+
+                                <label style="float:left"><input checked type="radio" id="purpose1" name="purpose1" value="Inquire">General Inquiry</label>
+                                <label style="float:left"><input type="radio" id="purpose2" name="purpose1" value="Reservation">Reservation Question</label>
+                                <label style="float:left"><input type="radio" id="purpose3" name="purpose1" value="Suggestion">Web Site Suggestion</label>
                             </div>
                             <div class="message-client">
                                 <label for="message1" class="message">Write here your message</label> 
@@ -139,12 +141,12 @@
                             </div>
                             <br>
                             <div class="suscription>">
-                                <label style="float:left"><input type="checkbox" value="newsletter">Please subscribe me to the monthly newsletter</label>
+                                <label style="float:left"><input type="checkbox" id="newsletter" >Please subscribe me to the monthly newsletter</label>
                                 
                             </div>
                             <br><br>
                             
-                            <button>Send</button>       
+                            <button>Ready! Submit form</button>       
                             <br>
                             <br>
                         </div>
