--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -41,7 +41,7 @@
                     <h3>Rafting Adventure</h3>
                     <h3>Phone: 999-999-999</h3>
                     <h3>Email: <a href="mailto:">contact_us@raftingadventures.com</a></h3>
-                    <div class="customer-service"> 
+                    <div class="customer-service">
                         <h3>Customer service</h3>
                         <h5>Sales : You need a personalized package or for a group, call us and we will take care of assisting you, 
                         identifying your requirements, which tour and package best adapt to the experience you want to have and thus enjoy a safe, 
@@ -61,11 +61,16 @@
                             but will also remain impregnated in your mind and heart with the desire to relive this adventure the following year.
                         </h5>
                         <h5>Phone : 999-999-999/05  Mail to : consulting@raftingadventures.com</h5>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d147612.70920025825!2d-71.91444382294861!3d-13.53751232406283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1733955784717!5m2!1ses-419!2spe" 
-                            width="376" height="346" allowfullscreen="" loading="lazy" 
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </div>
+                        <div class="map-responsive">
+                           <iframe 
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d288.33177282695624!2d-71.98711826658423!3d-13.516283086560154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1734237081555!5m2!1ses-419!2spe"
+                                width="600"
+                                height="450"
+                                style="border:0;"
+                                allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>    
                 </div>
             </section>
             <aside>
