--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -36,7 +36,7 @@
             <section class="company-information">
                 <div>
                     <p></p>
-                    <h1 class="title1">Constact Us</h1>
+                    <h2 class="title2">Constact Us</h2>
                     <h3>Send Us a Message</h3>
                     <h3>Rafting Adventure</h3>
                     <h3>Phone: 999-999-999</h3>
@@ -75,7 +75,7 @@
             </section>
             <aside>
                 <p></p>                
-                <h1 class="title1">Our Team</h1>
+                <h2 class="title2">Our Team</h2>
 
                 <h4 class="title4"> We have a team of 25 employees, our winning and service culture motivates us to work as a team and
                     with optimism to always provide the best service to the client and 
@@ -108,7 +108,7 @@
                     <h4 class="title4">Send us an email with your query to sales@raftingadventures.com, 
                         or complete the form.
                     </h4>
-                    <h1 class="title1"> Ready to get in contact?</h1>
+                    <h2 class="title2"> Ready to get in contact?</h2>
 
                     <!--<form action="data.php" method="post">-->
                     <section>
@@ -147,7 +147,7 @@
                                 <label style="float:left"><input type="checkbox" id="newsletter" >Please subscribe me to the monthly newsletter</label>
                             </div>
                             <br><br>
-                            <input class="button" type="submit" value ="Ready! Submit form">
+                            <a href="#" class="button">Ready! Submit form</a>
                             <br>
                             <br>
                         </div>
